--- a/index.html
+++ b/index.html
@@ -25,16 +25,10 @@
             <h3 id="titulo-caixa">Caixa do Capítulo</h3>
         </span>
 
-    
-        <div class="centralizar-botao">
-            <div class="botao1">
-                <a class="a1"  href="#">Cadastrar</a>
-            </div>
-
-            <div class="botao2">
-            <a class="a2" href="#">Começar</a>
-            </div>
+        <div class="botao2">
+        <a class="a2" href="pages/começo.html">Começar</a>
         </div>
+
 
     </main>
     
