--- a/pages/começo.html
+++ b/pages/começo.html
@@ -18,6 +18,16 @@
         </ul>
     </div>
 
+
+    <section class="container-a">
+        <div class="itens">
+            <div class="item1">
+                    
+            </div>
+
+        </div>
+
+    </section>
           
 
 
