--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav>
             <img  id="logo1" src="../imgs/logo separada 40 anos.png" alt="">
             <ul>
-                <li><a href="#">Cadastro</a></li>
-                <li><a href="#">Caixa</a></li>
+                <li><a href="../index.html">Cadastro</a></li>
+                <li><a href="pages/começo.html">Caixa</a></li>
                 <li><a href="#">Produtos</a></li>
             </ul>
             <img    id="logo2"  src="../imgs/cg10logo-depositphotos-bgremover.png" alt="">
